--- a/src/index.css
+++ b/src/index.css
@@ -39,11 +39,13 @@ h1 {
   font-size: 6rem;
   letter-spacing: 2px;
   word-spacing: 5px;
+  text-align: center;
 }
 
 h2 {
   text-align: center;
   margin-bottom: 2.4rem;
+  margin-top: 2.4rem
 }
 
 input {
@@ -93,4 +95,16 @@ input:focus {
 .loader {
   font-size: 2.4rem;
   font-weight: 700;
+}
+
+button{
+  display: flex;
+  margin-top: 2.4rem;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px 20px;
+  border-radius: 5px;
+
+  
+
 }
